tools/tests/errors/continue_outside_loop.ki
if 1 < 2:
    continue
